@@ -26,6 +26,10 @@ Add VM options:
 ```bash
 --add-exports com.google.gson/com.google.gson.internal=pl.edu.pwr.pwrinspace.poliwrocket
 ```
+To run the application on Linux download JavaFX and add modules:
+```bash
+--module-path $PATH_TO_JAVAFX_SDK/lib --add-modules=javafx.controls,javafx.fxml,javafx.base,javafx.graphics,javafx.web
+```
 
 To run the application with maps caching use VM options:
 ```bash
